Mudança de cor do background da página e do background dos cards

--- a/src/css/secoes/skills.css
+++ b/src/css/secoes/skills.css
@@ -22,7 +22,7 @@
     padding: 40px 20px;
     margin:30px;
     text-align: center;
-    background-color: rgb(48, 27, 66);
+    background-color: var(--background-cards);
     border-radius: 15px;
     transition: all .8s ease;
 }
