--- a/src/css/secoes/projects.css
+++ b/src/css/secoes/projects.css
@@ -16,7 +16,7 @@
     max-width: 300px;
     padding: 20px 20px;
     margin:30px;
-    background-color: rgb(48, 27, 66);
+    background-color: var(--background-cards);
     border-radius: 15px;
     transition: all .8s ease;
     display: flex;
