Correção de Erros no código

--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -135,8 +135,8 @@
 
    .header nav ul {
         display: none;        
-        background-color: var(--background-dark);         
-        padding: 20px;
+        background-color: black;         
+        padding: 30px;
       
     }
     
