--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     min-width: 300px;
-    width: 100%;
+    width: 80%;
     padding: 3rem 0;
 }
 .header .logo{
@@ -118,6 +118,7 @@
         top:-7px;
         right:-7px;
         z-index: 1;
+        margin-right:8rem;
     }
 
     /* pega todos os itens que após o input e que sao irmaos dele */
