--- a/src/css/secoes/home.css
+++ b/src/css/secoes/home.css
@@ -1,5 +1,16 @@
 .home {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../../imagens/fundo-roxo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+
+.home .box-home{
+    width: 80%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
