--- a/src/css/secoes/skills.css
+++ b/src/css/secoes/skills.css
@@ -27,34 +27,30 @@
     transition: all .8s ease;
 }
 
-.container-skills .informacoes.javascript {
-    color:#FBD83A;
-}
-
-.container-skills .informacoes.html {
-    color:#df4a17;
-}
-
-.container-skills .informacoes.css {
-    color:#00B1EE;
-}
-
-.container-skills .informacoes.git {
-    color:#f05033;
-}
-
 .container-skills .informacoes.github {
     color:#9B59B6;
 }
 
 .container-skills .informacoes:hover{
     transform: scale(1.2);
+    
 }
 
 .container-skills .informacoes .logo i{
     font-size: 8rem;
     transition:all .8s ease;
 }
+
+.container-skills .informacoes h3,
+ .container-skills .informacoes p{
+     margin:10px 0;
+     transition: all .8s ease;
+ }
+ 
+ .container-skills .informacoes:hover .logo i{
+     text-shadow: -2px 2px 4px rgba(0, 0, 0, 0.5),
+     2px -2px 0 rgba(255, 255, 255, 0.9);
+ }
 
 .container-skills .informacoes h3,
 .container-skills .informacoes p{
