--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap:2rem;
-  /*padding:0 8rem 3rem;*/
+  width: 100%;
 }
 
 main {
@@ -82,7 +82,7 @@ main {
   font-size: var(--fonte-grande);
   padding: 10px 20px;
   border-radius: 20px;
-  transition: all .7s ease-in-out;
+  transition: all .4s ease-in-out;
   background-color: var(--cor-primaria);
 }
 
